organize resources and start working on reader

--- a/404.html
+++ b/404.html
@@ -6,10 +6,10 @@
 
     <title>ReadSpace - Not found</title>
 
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="manifest" href="app.webmanifest" />
-    <script src="src/index.js" type="module"></script>
+    <link rel="stylesheet" href="resources/styles/normalize.css" />
+    <link rel="stylesheet" href="resources/styles/shared.css" />
+    <link rel="manifest" href="resources/PWA//app.webmanifest" />
+    <script src="resources/index.js" type="module"></script>
 
     <link rel="apple-touch-icon" href="assets/logos/adaptive-logo.svg" />
     <link rel="icon" href="assets/logos/adaptive-logo.svg" />
