--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>ReadSpace - home</title>
 
     <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="shared.css" />
     <link rel="manifest" href="app.webmanifest" />
-    <script src="src/index.js" type="module"></script>
+    <script src="index/index.js" type="module"></script>
 
     <link rel="apple-touch-icon" href="assets/logos/adaptive-logo.svg" />
     <link rel="icon" href="assets/logos/adaptive-logo.svg" />
