fix css import and add boilerplate

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <title>ReadSpace - home</title>
 
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="shared.css" />
+    <link rel="stylesheet" href="resources/styles/normalize.css" />
+    <link rel="stylesheet" href="resources/styles/shared.css" />
     <link rel="manifest" href="app.webmanifest" />
     <script src="index/index.js" type="module"></script>
 
