--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
 
-    <title>ReadSpace - profile</title>
+    <title>ReadSpace - about</title>
 
     <link rel="stylesheet" href="../resources/styles/normalize.css" />
     <link rel="stylesheet" href="../resources/styles/shared.css" />
@@ -15,7 +15,7 @@
 
   <body>
     <body>
-      <main>Profile goes here</main>
+      <main>About goes here</main>
       <navigation-bar />
     </body>
   </body>
