feat: update logo

--- a/src/app.html
+++ b/src/app.html
@@ -7,9 +7,9 @@
     <link rel="manifest" href="app.webmanifest" />
     <link
       rel="apple-touch-icon"
-      href="%sveltekit.assets%/icons/adaptive-logo.svg"
+      href="%sveltekit.assets%/icons/apple-touch-icon.png"
     />
-    <link rel="icon" href="%sveltekit.assets%/icons/adaptive-logo.svg" />
+    <link rel="icon" href="%sveltekit.assets%/icons/favicon.ico" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
