--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,7 @@
       href="%sveltekit.assets%/icons/apple-touch-icon.png"
     />
     <link rel="icon" href="%sveltekit.assets%/icons/favicon.ico" />
+    <link rel="icon" href="%sveltekit.assets%/icons/logo-color-scheme.svg" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
