--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,7 @@
     />
     <link rel="icon" href="%sveltekit.assets%/icons/favicon.ico" />
     <link rel="icon" href="%sveltekit.assets%/icons/logo-color-scheme.svg" />
+    <link rel="stylesheet" href="%sveltekit.assets%/reset.css" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
