improve storybook rendering and move some styling to a global file

--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="%sveltekit.assets%/icons/favicon.ico" />
     <link rel="icon" href="%sveltekit.assets%/icons/logo-color-scheme.svg" />
     <link rel="stylesheet" href="%sveltekit.assets%/reset.css" />
+    <link rel="stylesheet" href="%sveltekit.assets%/global.css" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
