--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -1,15 +1,4 @@
-<style>
-  :root {
-    --background: #211f11;
-    --foreground: #ffffff;
-    --foreground-colored: #a22c2c;
-    --hue: #ffd900;
-    font-size: 20px;
-    --box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    --border-width: 2px;
-    --border-radius: 2rem;
-    --border: var(--border-width) solid var(--foreground);
-    accent-color: var(--highlight-color);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-</style>
+<head>
+  <link rel="stylesheet" href="/reset.css" />
+  <link rel="stylesheet" href="/global.css" />
+</head>
